# graffito

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/io/johnsonlee/graffito/: GraffitoApplication.kt  GraffitoProvider.kt  MainActivity.kt  TraceService.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_provider_paths.xml
core/: build.gradle
core/src/main/: AndroidManifest.xml
core/src/main/cpp/: CMakeLists.txt
core/src/main/cpp/app/: anr.c  anr.h  art.c  art.h
core/src/main/cpp/include/: defs.h  log.h  queue.h  text.h
core/src/main/cpp/linker/: linker.c  linker.h
core/src/main/cpp/proc/: proc.c  proc.h
core/src/main/cpp/sources/app/: anr.c  app.c  app.h
core/src/main/cpp/sources/io/: file.c  file.h
core/src/main/cpp/sources/linker/: linker.c
core/src/main/cpp/sources/procfs/: procfs.c  procfs.h
